--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </div>
   </nav>
 
-  <aside class="product-detail inactive">
+  <aside id="shoppingCartConytainer"  class="inactive">
     <div class="title-container">
       <img src="./icons/flechita.svg" alt="arrow">
       <p class="title">My order</p>
@@ -160,8 +160,8 @@
     </div>
   </div>
   </aside>
-  
-  <aside class="product-detail">
+
+  <aside id="product-detail" class="inactive">
     <div class="product-detail-close">
       <img src="./icons/icon_close.png" alt="close">
     </div>
